# Sea-Battle

./: .gitignore
client/: CMakeLists.txt  Connect.cpp  Connect.h  Field.cpp  Field.h  Game.cpp  Game.h  Logic.cpp  Logic.h  Textures.cpp  Textures.h  client.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
server/: CMakeLists.txt  Field.cpp  Server.cpp  Server.h  server.pro
